--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lesson</title>
+    <title>Weather app</title>
     <link
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
       rel="stylesheet"
@@ -16,8 +16,66 @@
     />
     <link rel="stylesheet" href="css/main.min.css" />
   </head>
+  <body class="body">
+    <div class="weather">
+      <div class="container">
+        <h3 class="weather__title">
+          <!-- The weather -->
+        </h3>
+        <div class="weather__buttons">
+          <button class="weather__btn rain">Rain</button>
+          <button class="weather__btn snow">Snow</button>
+          <button class="weather__btn fog">Fog</button>
+          <button class="weather__btn sunny">Clear</button>
+          <button class="weather__btn thund">Thunderstorm</button>
+        </div>
+        <div class="weather__animation">
+            <h1 class="weather__temp">25&#176;</h1>
+            <div class="weather__country">
+                <h1 class="weather__name">
+                  Toshkent
+                </h1>
+                <span class="weather__time">06:01</span>
+                -
+                <span class="weather__data">Monday April 20</span>
+            </div>
+        </div>
+        <!-- <div class="iconsBox__iconsBox">
+          <img class="iconsBox__iconSun" src="images/sunImg.png" alt="">
+          <span class="weather__condition">Sunny</span>
+        </div> -->
+      </div>
 
-  <body>
+
+    <div class="panel">
+      <form method="get" class="input-form">
+        <input class="search" type="text" placeholder="Enter location">
+        <button class="search-btn">Search</button>
+      </form>
+    
+    <ul class="countrys">
+      <li class="country">Samarqand</li>
+      <li class="country">Andijon</li>
+      <li class="country">Buxoro</li>
+      <li class="country">Nukus</li>
+    </ul>
+    <ul class="details">
+      <h4 class="detailis__h4">Weather Details</h4>
+      <li class="detailis__span">
+          <span class="detailis__item"></span>
+          <span class="detailis__span">77%</span>
+      </li>
+      <li class="detailis__span">
+        <span class="detailis__item">Humidity</span>
+        <span class="detailis__span">59%</span>
+    </li>
+    <li class="detailis__span">
+      <span class="detailis__item">Wind</span>
+      <span class="detailis__span">7km/h</span>
+  </li>
+    </ul>
+  </div>
+  </div>
     <script src="js/main.js"></script>
   </body>
 </html>
