--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <button class="weather__btn snow">Snow</button>
           <button class="weather__btn fog">Fog</button>
           <button class="weather__btn sunny">Clear</button>
+          <button class="weather__btn clouds">Clouds</button>
           <button class="weather__btn thund">Thunderstorm</button>
         </div>
         <div class="weather__animation">
@@ -35,7 +36,7 @@
                 <h1 class="weather__name">
                   Toshkent
                 </h1>
-                <span class="weather__time">06:01</span>
+                <span class="weather__time">07:01</span>
                 -
                 <span class="weather__data">Monday April 20</span>
             </div>
@@ -67,11 +68,11 @@
       </li>
       <li class="detailis__span">
         <span class="detailis__item">Humidity</span>
-        <span class="detailis__span">59%</span>
+        <span class="detailis__span2">59</span>%
     </li>
     <li class="detailis__span">
       <span class="detailis__item">Wind</span>
-      <span class="detailis__span">7km/h</span>
+      <span class="detailis__span1">7</span>km/h
   </li>
     </ul>
   </div>
